--- a/style.css
+++ b/style.css
@@ -229,9 +229,24 @@ footer {
 /***************************** MEDIA QUERIES ******************************/
 /*portrait*/
 @media (min-width: 320px) and (max-width: 579px) {
+
+    body {
+        width: 100%;
+        height: 100%;
+    }
+
+    #logo {
+        width: 225px;
+        height: 65px;
+    }
+
     .main-heading {
         margin-top: 0;
         font-size: 4vh;
+    }
+
+    table * {
+        font-size: 12px;
     }
 
     .main_nav > li {
@@ -248,7 +263,7 @@ footer {
     }
 
     .item-name {
-        width: 55vw;
+        width: 200px;
     }
 
     .button-container {
@@ -258,7 +273,7 @@ footer {
     #additem-button {
         height: 6vh;
         font-size: 2vh;
-        width: 42vw;
+        width: 100px;
     }
 
     footer {
@@ -270,7 +285,7 @@ footer {
     }
 
     .items {
-        width: 30%;
+        width: 80%;
     }
 
     .quantity, .cost, .totalcost {
